feature(pagination): fix search pagination
return and show search despite get more document click

[#143671477]

--- a/client/css/style.scss
+++ b/client/css/style.scss
@@ -96,6 +96,11 @@ button {
   width: 200% !important;
 }
 
-.api-docs-links {
+.mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
+  padding: 0;
+}
 
+.mdl-layout__drawer > .mdl-layout__title, .mdl-layout__drawer > .mdl-layout-title {
+  background: #3f51b5 !important;
+  color: $primary-white;
 }
